--- a/lesson1/exercises/src/app/app.component.html
+++ b/lesson1/exercises/src/app/app.component.html
@@ -1,3 +1,4 @@
+<page-tile></page-tile>
 <div class="container">
     <div class="row justify-content-center">
       <div class="col-3">
@@ -5,17 +6,15 @@
       </div>
   
       <div class="col-3">
-        <p>No content here yet...</p>
+        <chores-list></chores-list>
       </div>
   
       <div class="col-3">
-        <p>No content here yet...</p>
+        <fav-photos></fav-photos>
       </div>
+
     </div>
   </div>
+  <hr>
   
-  <chores-list></chores-list>
-  
-  <fav-photos></fav-photos>
-
   <fav-links></fav-links>
