--- a/lesson1/exercises/src/app/fav-links/fav-links.component.html
+++ b/lesson1/exercises/src/app/fav-links/fav-links.component.html
@@ -1,3 +1,3 @@
-<a href = "{{favlinks[0]}}">English Premiere League</a>
+<a href = "{{favlinks[o]}}">English Premiere League</a>
 <br>
 <a href = "{{favlinks[1]}}">National Rugby League</a>
